// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getColors() should return correct css for theme: dark and hasInvertedTheme: false 1`] = `
Object {
  "backgroundColor": "#262b2e",
  "baseColor": "#fff",
  "focusColor": null,
  "hoverColor": "#ff0223",
  "outlineColor": "currentColor",
}
`;

exports[`getColors() should return correct css for theme: dark and hasInvertedTheme: true 1`] = `
Object {
  "backgroundColor": "#262b2e",
  "baseColor": "#000",
  "focusColor": "currentColor",
  "hoverColor": "#d5001c",
  "outlineColor": "#fff",
}
`;

exports[`getColors() should return correct css for theme: light and hasInvertedTheme: false 1`] = `
Object {
  "backgroundColor": "#f2f2f2",
  "baseColor": "#000",
  "focusColor": null,
  "hoverColor": "#d5001c",
  "outlineColor": "currentColor",
}
`;

exports[`getColors() should return correct css for theme: light and hasInvertedTheme: true 1`] = `
Object {
  "backgroundColor": "#f2f2f2",
  "baseColor": "#fff",
  "focusColor": "currentColor",
  "hoverColor": "#ff0223",
  "outlineColor": "#000",
}
`;

exports[`getComponentCss() should return correct css for color: background-default, isFocusable: false and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  height: 1.5rem;
  padding: 0 0.375rem;
  border-radius: 0.25rem;
  background: #0e1418;
  color: #fff;
  font: normal normal 400 0.75rem/1.6666666667 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  white-space: nowrap;
}
::slotted(br) {
  display: none !important;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: normal !important;
}
.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: background-default, isFocusable: false and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  height: 1.5rem;
  padding: 0 0.375rem;
  border-radius: 0.25rem;
  background: #fff;
  color: #000;
  font: normal normal 400 0.75rem/1.6666666667 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  white-space: nowrap;
}
::slotted(br) {
  display: none !important;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: normal !important;
}
.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: background-default, isFocusable: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  height: 1.5rem;
  padding: 0 0.375rem;
  border-radius: 0.25rem;
  background: #0e1418;
  color: #fff;
  font: normal normal 400 0.75rem/1.6666666667 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  white-space: nowrap;
  transition: color var(--p-transition-duration, .24s) ease;
}
span:hover {
  color: #ff0223;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
}
::slotted(a)::-moz-focus-inner, ::slotted(button)::-moz-focus-inner {
  border: 0 !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: \\"\\" !important;
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  outline-color: currentColor !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  outline-color: transparent !important;
}
::slotted(a) {
  color: #fff !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
}
::slotted(a:hover) {
  color: #ff0223 !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  color: inherit !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: normal !important;
}
::slotted(a)::before, ::slotted(button)::before {
  border-radius: 0.25rem !important;
}
.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: background-default, isFocusable: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  height: 1.5rem;
  padding: 0 0.375rem;
  border-radius: 0.25rem;
  background: #fff;
  color: #000;
  font: normal normal 400 0.75rem/1.6666666667 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  white-space: nowrap;
  transition: color var(--p-transition-duration, .24s) ease;
}
span:hover {
  color: #d5001c;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
}
::slotted(a)::-moz-focus-inner, ::slotted(button)::-moz-focus-inner {
  border: 0 !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: \\"\\" !important;
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  outline-color: currentColor !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  outline-color: transparent !important;
}
::slotted(a) {
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
}
::slotted(a:hover) {
  color: #d5001c !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  color: inherit !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: normal !important;
}
::slotted(a)::before, ::slotted(button)::before {
  border-radius: 0.25rem !important;
}
.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: background-surface, isFocusable: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  height: 1.5rem;
  padding: 0 0.375rem;
  border-radius: 0.25rem;
  background: #262b2e;
  color: #fff;
  font: normal normal 400 0.75rem/1.6666666667 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  white-space: nowrap;
  transition: color var(--p-transition-duration, .24s) ease;
}
span:hover {
  color: #ff0223;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
}
::slotted(a)::-moz-focus-inner, ::slotted(button)::-moz-focus-inner {
  border: 0 !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: \\"\\" !important;
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  outline-color: currentColor !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  outline-color: transparent !important;
}
::slotted(a) {
  color: #fff !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
}
::slotted(a:hover) {
  color: #ff0223 !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  color: inherit !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: normal !important;
}
::slotted(a)::before, ::slotted(button)::before {
  border-radius: 0.25rem !important;
}
.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: background-surface, isFocusable: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  height: 1.5rem;
  padding: 0 0.375rem;
  border-radius: 0.25rem;
  background: #f2f2f2;
  color: #000;
  font: normal normal 400 0.75rem/1.6666666667 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  white-space: nowrap;
  transition: color var(--p-transition-duration, .24s) ease;
}
span:hover {
  color: #d5001c;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
}
::slotted(a)::-moz-focus-inner, ::slotted(button)::-moz-focus-inner {
  border: 0 !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: \\"\\" !important;
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  outline-color: currentColor !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  outline-color: transparent !important;
}
::slotted(a) {
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
}
::slotted(a:hover) {
  color: #d5001c !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  color: inherit !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: normal !important;
}
::slotted(a)::before, ::slotted(button)::before {
  border-radius: 0.25rem !important;
}
.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: neutral-contrast-high, isFocusable: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  height: 1.5rem;
  padding: 0 0.375rem;
  border-radius: 0.25rem;
  background: #e3e4e5;
  color: #000;
  font: normal normal 400 0.75rem/1.6666666667 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  white-space: nowrap;
  transition: color var(--p-transition-duration, .24s) ease;
}
span:hover {
  color: #d5001c;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
}
::slotted(a)::-moz-focus-inner, ::slotted(button)::-moz-focus-inner {
  border: 0 !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: \\"\\" !important;
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  outline-color: #fff !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  outline-color: transparent !important;
}
::slotted(a:focus-visible:hover)::before, ::slotted(button:focus-visible:hover)::before {
  transition: outline-color var(--p-transition-duration, .24s) ease !important;
  outline-color: currentColor !important;
}
::slotted(a) {
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
}
::slotted(a:hover) {
  color: #d5001c !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  color: inherit !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: normal !important;
}
::slotted(a)::before, ::slotted(button)::before {
  border-radius: 0.25rem !important;
}
.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: neutral-contrast-high, isFocusable: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  height: 1.5rem;
  padding: 0 0.375rem;
  border-radius: 0.25rem;
  background: #323639;
  color: #fff;
  font: normal normal 400 0.75rem/1.6666666667 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  white-space: nowrap;
  transition: color var(--p-transition-duration, .24s) ease;
}
span:hover {
  color: #ff0223;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
}
::slotted(a)::-moz-focus-inner, ::slotted(button)::-moz-focus-inner {
  border: 0 !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: \\"\\" !important;
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  outline-color: #000 !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  outline-color: transparent !important;
}
::slotted(a:focus-visible:hover)::before, ::slotted(button:focus-visible:hover)::before {
  transition: outline-color var(--p-transition-duration, .24s) ease !important;
  outline-color: currentColor !important;
}
::slotted(a) {
  color: #fff !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
}
::slotted(a:hover) {
  color: #ff0223 !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  color: inherit !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: normal !important;
}
::slotted(a)::before, ::slotted(button)::before {
  border-radius: 0.25rem !important;
}
.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-error, isFocusable: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  height: 1.5rem;
  padding: 0 0.375rem;
  border-radius: 0.25rem;
  background: #fec5c5;
  color: #000;
  font: normal normal 400 0.75rem/1.6666666667 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  white-space: nowrap;
  transition: color var(--p-transition-duration, .24s) ease;
}
span:hover {
  color: #d5001c;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
}
::slotted(a)::-moz-focus-inner, ::slotted(button)::-moz-focus-inner {
  border: 0 !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: \\"\\" !important;
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  outline-color: #fff !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  outline-color: transparent !important;
}
::slotted(a:focus-visible:hover)::before, ::slotted(button:focus-visible:hover)::before {
  transition: outline-color var(--p-transition-duration, .24s) ease !important;
  outline-color: currentColor !important;
}
::slotted(a) {
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
}
::slotted(a:hover) {
  color: #d5001c !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  color: inherit !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: normal !important;
}
::slotted(a)::before, ::slotted(button)::before {
  border-radius: 0.25rem !important;
}
.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-error, isFocusable: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  height: 1.5rem;
  padding: 0 0.375rem;
  border-radius: 0.25rem;
  background: #fae6e6;
  color: #000;
  font: normal normal 400 0.75rem/1.6666666667 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  white-space: nowrap;
  transition: color var(--p-transition-duration, .24s) ease;
}
span:hover {
  color: #d5001c;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
}
::slotted(a)::-moz-focus-inner, ::slotted(button)::-moz-focus-inner {
  border: 0 !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: \\"\\" !important;
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  outline-color: currentColor !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  outline-color: transparent !important;
}
::slotted(a) {
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
}
::slotted(a:hover) {
  color: #d5001c !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  color: inherit !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: normal !important;
}
::slotted(a)::before, ::slotted(button)::before {
  border-radius: 0.25rem !important;
}
.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-neutral, isFocusable: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  height: 1.5rem;
  padding: 0 0.375rem;
  border-radius: 0.25rem;
  background: #c7e4ff;
  color: #000;
  font: normal normal 400 0.75rem/1.6666666667 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  white-space: nowrap;
  transition: color var(--p-transition-duration, .24s) ease;
}
span:hover {
  color: #d5001c;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
}
::slotted(a)::-moz-focus-inner, ::slotted(button)::-moz-focus-inner {
  border: 0 !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: \\"\\" !important;
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  outline-color: #fff !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  outline-color: transparent !important;
}
::slotted(a:focus-visible:hover)::before, ::slotted(button:focus-visible:hover)::before {
  transition: outline-color var(--p-transition-duration, .24s) ease !important;
  outline-color: currentColor !important;
}
::slotted(a) {
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
}
::slotted(a:hover) {
  color: #d5001c !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  color: inherit !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: normal !important;
}
::slotted(a)::before, ::slotted(button)::before {
  border-radius: 0.25rem !important;
}
.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-neutral, isFocusable: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  height: 1.5rem;
  padding: 0 0.375rem;
  border-radius: 0.25rem;
  background: #e5eff8;
  color: #000;
  font: normal normal 400 0.75rem/1.6666666667 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  white-space: nowrap;
  transition: color var(--p-transition-duration, .24s) ease;
}
span:hover {
  color: #d5001c;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
}
::slotted(a)::-moz-focus-inner, ::slotted(button)::-moz-focus-inner {
  border: 0 !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: \\"\\" !important;
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  outline-color: currentColor !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  outline-color: transparent !important;
}
::slotted(a) {
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
}
::slotted(a:hover) {
  color: #d5001c !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  color: inherit !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: normal !important;
}
::slotted(a)::before, ::slotted(button)::before {
  border-radius: 0.25rem !important;
}
.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-success, isFocusable: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  height: 1.5rem;
  padding: 0 0.375rem;
  border-radius: 0.25rem;
  background: #bfeec6;
  color: #000;
  font: normal normal 400 0.75rem/1.6666666667 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  white-space: nowrap;
  transition: color var(--p-transition-duration, .24s) ease;
}
span:hover {
  color: #d5001c;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
}
::slotted(a)::-moz-focus-inner, ::slotted(button)::-moz-focus-inner {
  border: 0 !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: \\"\\" !important;
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  outline-color: #fff !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  outline-color: transparent !important;
}
::slotted(a:focus-visible:hover)::before, ::slotted(button:focus-visible:hover)::before {
  transition: outline-color var(--p-transition-duration, .24s) ease !important;
  outline-color: currentColor !important;
}
::slotted(a) {
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
}
::slotted(a:hover) {
  color: #d5001c !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  color: inherit !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: normal !important;
}
::slotted(a)::before, ::slotted(button)::before {
  border-radius: 0.25rem !important;
}
.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-success, isFocusable: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  height: 1.5rem;
  padding: 0 0.375rem;
  border-radius: 0.25rem;
  background: #e5f3e7;
  color: #000;
  font: normal normal 400 0.75rem/1.6666666667 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  white-space: nowrap;
  transition: color var(--p-transition-duration, .24s) ease;
}
span:hover {
  color: #d5001c;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
}
::slotted(a)::-moz-focus-inner, ::slotted(button)::-moz-focus-inner {
  border: 0 !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: \\"\\" !important;
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  outline-color: currentColor !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  outline-color: transparent !important;
}
::slotted(a) {
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
}
::slotted(a:hover) {
  color: #d5001c !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  color: inherit !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: normal !important;
}
::slotted(a)::before, ::slotted(button)::before {
  border-radius: 0.25rem !important;
}
.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-warning, isFocusable: true and theme: dark 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  height: 1.5rem;
  padding: 0 0.375rem;
  border-radius: 0.25rem;
  background: #ffe6bf;
  color: #000;
  font: normal normal 400 0.75rem/1.6666666667 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  white-space: nowrap;
  transition: color var(--p-transition-duration, .24s) ease;
}
span:hover {
  color: #d5001c;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
}
::slotted(a)::-moz-focus-inner, ::slotted(button)::-moz-focus-inner {
  border: 0 !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: \\"\\" !important;
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  outline-color: #fff !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  outline-color: transparent !important;
}
::slotted(a:focus-visible:hover)::before, ::slotted(button:focus-visible:hover)::before {
  transition: outline-color var(--p-transition-duration, .24s) ease !important;
  outline-color: currentColor !important;
}
::slotted(a) {
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
}
::slotted(a:hover) {
  color: #d5001c !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  color: inherit !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: normal !important;
}
::slotted(a)::before, ::slotted(button)::before {
  border-radius: 0.25rem !important;
}
.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getComponentCss() should return correct css for color: notification-warning, isFocusable: true and theme: light 1`] = `
":host {
  display: inline-flex;
  vertical-align: top;
}
span {
  display: flex;
  align-items: center;
  position: relative;
  height: 1.5rem;
  padding: 0 0.375rem;
  border-radius: 0.25rem;
  background: #fff5e5;
  color: #000;
  font: normal normal 400 0.75rem/1.6666666667 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  white-space: nowrap;
  transition: color var(--p-transition-duration, .24s) ease;
}
span:hover {
  color: #d5001c;
}
::slotted(a), ::slotted(button) {
  display: inline !important;
  position: static !important;
  text-decoration: underline !important;
  cursor: pointer !important;
  font: inherit !important;
  outline: 0 !important;
}
::slotted(a)::-moz-focus-inner, ::slotted(button)::-moz-focus-inner {
  border: 0 !important;
}
::slotted(a)::before, ::slotted(button)::before {
  content: \\"\\" !important;
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
  outline: 1px solid transparent !important;
  outline-offset: 2px !important;
}
::slotted(a:focus)::before, ::slotted(button:focus)::before {
  outline-color: currentColor !important;
}
::slotted(a:focus:not(:focus-visible))::before, ::slotted(button:focus:not(:focus-visible))::before {
  outline-color: transparent !important;
}
::slotted(a) {
  color: #000 !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
}
::slotted(a:hover) {
  color: #d5001c !important;
}
::slotted(button) {
  margin: 0 !important;
  padding: 0 !important;
  background: 0 !important;
  border: 0 !important;
  color: inherit !important;
  text-align: left !important;
}
::slotted(br) {
  display: none !important;
}
::slotted(strong), ::slotted(b) {
  font-weight: 700 !important;
}
::slotted(em), ::slotted(i) {
  font-style: normal !important;
}
::slotted(a)::before, ::slotted(button)::before {
  border-radius: 0.25rem !important;
}
.icon {
  margin: 0 0.125rem 0 -0.125rem;
}"
`;

exports[`getThemedBackgroundColor() should return correct backgroundColor for color: background-default, theme: dark 1`] = `"#0e1418"`;

exports[`getThemedBackgroundColor() should return correct backgroundColor for color: background-default, theme: light 1`] = `"#fff"`;

exports[`getThemedBackgroundColor() should return correct backgroundColor for color: background-surface, theme: dark 1`] = `"#262b2e"`;

exports[`getThemedBackgroundColor() should return correct backgroundColor for color: background-surface, theme: light 1`] = `"#f2f2f2"`;

exports[`getThemedBackgroundColor() should return correct backgroundColor for color: neutral-contrast-high, theme: dark 1`] = `"#e3e4e5"`;

exports[`getThemedBackgroundColor() should return correct backgroundColor for color: neutral-contrast-high, theme: light 1`] = `"#323639"`;

exports[`getThemedBackgroundColor() should return correct backgroundColor for color: notification-error, theme: dark 1`] = `"#fec5c5"`;

exports[`getThemedBackgroundColor() should return correct backgroundColor for color: notification-error, theme: light 1`] = `"#fae6e6"`;

exports[`getThemedBackgroundColor() should return correct backgroundColor for color: notification-neutral, theme: dark 1`] = `"#c7e4ff"`;

exports[`getThemedBackgroundColor() should return correct backgroundColor for color: notification-neutral, theme: light 1`] = `"#e5eff8"`;

exports[`getThemedBackgroundColor() should return correct backgroundColor for color: notification-success, theme: dark 1`] = `"#bfeec6"`;

exports[`getThemedBackgroundColor() should return correct backgroundColor for color: notification-success, theme: light 1`] = `"#e5f3e7"`;

exports[`getThemedBackgroundColor() should return correct backgroundColor for color: notification-warning, theme: dark 1`] = `"#ffe6bf"`;

exports[`getThemedBackgroundColor() should return correct backgroundColor for color: notification-warning, theme: light 1`] = `"#fff5e5"`;
